<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Consult</string>
    <string name="action_settings">Settings</string>
    
    <string name="dummy_label">Label</string>
    <string name="dummy_unit">unit</string>
    <string name="divider_desc">Divider</string>
    
    <string name="action_clear">Clear</string>
    
    <string name="header_patient_details">Patient Details</string>
    <string name="header_dosing_regimin">Dosing Regimen</string>
    <string name="header_results">Results</string>
    
    <string name="input_age_label">Age</string>
    <string name="input_age_unit">yr</string>
    <string name="input_sex_label">Sex</string>
	<string name="input_ht_label">Height</string>
    <string name="input_wt_label">Weight</string>
	<string name="input_wt_unit">kg</string>
	<string name="input_SCr_label">SCr</string>
	<string name="input_SCr_unit">mg/dL</string>
	<string name="input_dose_label">Dose</string>
	<string name="input_dose_unit">mg</string>
	<string name="input_dose_interval_label">Dosing Interval</string>
	<string name="input_dose_interval_unit">hr</string>
		
	<string name="input_isDiabetic_label">Diabetic</string>
	<string name="input_hasAids_label">Aids</string>
	<string name="input_inICU_label">In ICU</string>
	<string name="input_isPregnant_label">Pregnant</string>
	<string name="input_hasAcuteRenalFailure_label">Acute Renal Failure</string>
	<string name="input_hasEndStageRenalDisease_label">End Stage Renal Disease</string>
	<string name="input_hasCancer_label">Cancer</string>
	<string name="input_isBedridden_label">Bedridden</string>
	<string name="input_isParaplegic_label">Paraplegic</string>
	<string name="input_isQuadriplegic_label">Quadriplegic</string>
    
	<string name="output_value_default"> - </string>
	<string name="output_ht_inches_label">Height</string>
	<string name="output_ht_inches_unit">in</string>
	<string name="output_wt_ideal_label">Ideal</string>
	<string name="output_wt_ideal_unit">kg</string>
	<string name="output_wt_adj_label">Adj</string>
	<string name="output_wt_adj_unit">kg</string>
	<string name="output_Vd_label">V<sub><small>d</small></sub></string>
	<string name="output_Vd_unit">L</string>
	<string name="output_Vd_over_ABW_label">V<sub><small>d</small></sub>/ABW</string>
	<string name="output_Vd_over_ABW_unit">L/kg</string>
	<string name="output_Cmax_label">C<sub><small>max</small></sub></string>
	<string name="output_Cmax_unit">mg/L</string>
	<string name="output_Cmin_label">C<sub><small>min</small></sub></string>
	<string name="output_Cmin_unit">mg/L</string>
	<string name="output_kel_label">k<sub><small>e</small></sub></string>
	<string name="output_kel_unit">hr<sup><small>-1</small></sup></string>
	<string name="output_halflife_label">t<sub><small>1/2</small></sub></string>
	<string name="output_halflife_unit">hr</string>
	<string name="output_CrCl_label">CrCl</string>
	<string name="output_CrCl_unit">mL/min</string>

</resources>
