<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:gravity="right"
        android:minWidth="60dp"
        android:paddingBottom="8dp"
        android:paddingLeft="4dp"
        android:text="@string/dummy_label"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="?android:attr/textColorSecondaryInverse" />

    <TextView
        android:id="@+id/value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/label"
        android:layout_toLeftOf="@id/unit"
        android:layout_toRightOf="@id/label"
        android:gravity="right"
        android:paddingBottom="8dp"
        android:text="@string/output_value_default"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/label"
        android:layout_alignParentRight="true"
        android:minWidth="60dp"
        android:paddingBottom="8dp"
        android:paddingLeft="4dp"
        android:text="@string/dummy_unit"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="?android:attr/textColorSecondaryInverse" />

</RelativeLayout>